--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "html2canvas": "^1.4.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
